✨ Amélioration majeure du système de booking public 2025
- Ajout d'un calendrier moderne étendu (12 mois minimum au lieu de 3 jours)
- Création d'un modal adaptatif qui s'adapte aux couleurs des templates
- Intégration du nouveau calendrier dans DateTimeSelection
- Amélioration de l'UX avec des animations fluides
- Support complet du responsive mobile
- Chargement des disponibilités sur 30 jours
- Design moderne digne de 2025 avec glassmorphism
- Traductions ajoutées pour le calendrier (FR/EN/AR)

Fichiers créés:
- ModernCalendar.tsx/css: Calendrier complet avec navigation mensuelle
- AdaptiveModal.tsx/css: Modal adaptatif aux templates

Fichiers modifiés:
- DateTimeSelection.tsx: Intégration du nouveau calendrier
- public.json: Ajout des traductions calendrier

--- a/beauty-flow/public/locales/fr/public.json
+++ b/beauty-flow/public/locales/fr/public.json
@@ -28,6 +28,13 @@
       "stylist": "Coiffeur",
       "date": "Date",
       "time": "Heure"
+    },
+    "calendar": {
+      "month_view": "Mois",
+      "week_view": "Semaine",
+      "today": "Aujourd'hui",
+      "available": "Disponible",
+      "unavailable": "Indisponible"
     }
   },
   "salon": {
