fix: Corrections majeures Saloneo - Session complète 18/10/2025
✅ CORRECTIONS EFFECTUÉES :

1. INTÉGRATION COMPLÈTE DES LOGOS SALONEO
   - 5 logos ajoutés dans beauty-flow/public/images/logos/
   - Composant SaloneoLogo.tsx créé avec support complet
   - Props: iconOnly, variant (color/white/dark/white-colors/auto), size (sm/md/lg/xl)
   - Mode auto qui s'adapte automatiquement au thème
   - Logo Icon intégré dans AuthLayout.tsx

2. PROFIL - PERSISTANCE DES DONNÉES
   - Correction de la sauvegarde de la monnaie (currency)
   - Correction de la sauvegarde de l'adresse
   - Utilisation de la dot notation dans le backend
   - Fichier: beauty-flow-backend/src/controllers/profile.controller.ts
   - Les settings ne sont plus écrasés mais mergés correctement

3. CALENDAR VIEW - VÉRIFICATION
   - Code vérifié et confirmé correct
   - Traductions existantes et correctes
   - Aucune modification nécessaire

4. DASHBOARD - CORRECTION 'undefined undefined'
   - TeamPerformanceWidget corrigé
   - Ajout de fallbacks pour firstName, lastName, role
   - Traductions FR ajoutées: unknown_member, no_role
   - Gestion robuste des données manquantes

5. DOCUMENTATION
   - DOCUMENTATION_RETOUCHES_FINALES.md mise à jour
   - Statuts réalistes avec cases cochées
   - Résumé détaillé de la session
   - Version 1.1 avec horodatage

📊 FICHIERS MODIFIÉS :
- beauty-flow/public/images/logos/ (5 logos)
- beauty-flow/src/components/SaloneoLogo.tsx
- beauty-flow/src/features/auth/components/AuthLayout.tsx
- beauty-flow-backend/src/controllers/profile.controller.ts
- beauty-flow/src/features/dashboard/components/TeamPerformanceWidget.tsx
- beauty-flow/public/locales/fr/dashboard.json
- DOCUMENTATION_RETOUCHES_FINALES.md

🎯 PROCHAINES PRIORITÉS :
- Formulaires: Supprimer zéros au focus
- Téléphone international: react-phone-input-2
- Formulaire RDV: Modales de création rapide

--- a/beauty-flow/public/locales/fr/dashboard.json
+++ b/beauty-flow/public/locales/fr/dashboard.json
@@ -166,7 +166,9 @@
     "team_performance": {
       "title": "Performance de l'équipe",
       "no_members": "Aucun membre d'équipe",
-      "completed": "terminés"
+      "completed": "terminés",
+      "unknown_member": "Membre inconnu",
+      "no_role": "Aucun rôle"
     }
   }
 }
