feat(i18n): Ajout traductions online_settings pour services (FR, EN, AR, ES, PT, TR)
- Ajout de form.online_settings.available_online
- Ajout de form.online_settings.minimum_booking_time
- Ajout de form.online_settings.booking_times (1h, 2h, 4h, 12h, 24h, 48h)
- Traductions complètes pour les 6 langues supportées
- Correction duplication dans EN services.json
- Étape 19 Internationalisation: online_settings terminé

--- a/beauty-flow/public/locales/ar/services.json
+++ b/beauty-flow/public/locales/ar/services.json
@@ -26,7 +26,19 @@
     "commission": "العمولة",
     "discount": "الخصم",
     "add_image": "إضافة صورة",
-    "remove_image": "إزالة الصورة"
+    "remove_image": "إزالة الصورة",
+    "online_settings": {
+      "available_online": "متاح عبر الإنترنت",
+      "minimum_booking_time": "الحد الأدنى لوقت الحجز",
+      "booking_times": {
+        "1": "قبل ساعة واحدة",
+        "2": "قبل ساعتين",
+        "4": "قبل 4 ساعات",
+        "12": "قبل 12 ساعة",
+        "24": "قبل 24 ساعة (يوم واحد)",
+        "48": "قبل 48 ساعة (يومان)"
+      }
+    }
   },
   "categories": {
     "haircut": "قص الشعر",
