feat: Panel d'administration complet avec tests
✅ Backend:
- Modèle User: Ajout champs role et isAdmin
- Middleware adminAuth pour protection des routes
- Routes admin: GET users, PATCH subscription, GET stats
- Controller admin avec pagination, recherche, filtres
- Statistiques plateforme complètes

✅ Frontend:
- AdminPage avec tableau UsersList intégré
- Modal SubscriptionEditor pour modification abonnements
- Design glassmorphism orange/gris
- Support dark mode complet
- Traductions FR, EN, AR

✅ Tests:
- Script test-admin-panel.js (10 tests complets)
- Tests authentification, pagination, recherche, filtres
- Tests modification abonnement et statistiques
- Tests sécurité (accès non autorisé, non-admin)

✅ Navigation:
- Route /admin ajoutée
- Lien dans MainLayout (visible admins uniquement)
- Icône ShieldIcon distinctive

📝 Utilisation:
1. node beauty-flow-backend/create-admin.js
2. Se connecter avec compte admin
3. Accéder à /admin
4. Tester avec: node beauty-flow-backend/test-admin-panel.js

--- a/beauty-flow/public/locales/ar/admin.json
+++ b/beauty-flow/public/locales/ar/admin.json
@@ -48,7 +48,19 @@
   "no_users": "لم يتم العثور على مستخدمين",
   "edit_modal": {
     "title": "تعديل الاشتراك",
-    "coming_soon": "الميزة قيد التطوير",
-    "close": "إغلاق"
+    "plan": "خطة الاشتراك",
+    "duration": "المدة",
+    "monthly": "شهري",
+    "yearly": "سنوي",
+    "biennial": "سنتان",
+    "triennial": "ثلاث سنوات",
+    "expiry_date": "تاريخ الانتهاء",
+    "expiry_help": "اتركه فارغًا للحساب التلقائي بناءً على المدة",
+    "active": "اشتراك نشط",
+    "cancel": "إلغاء",
+    "save": "حفظ",
+    "saving": "جاري الحفظ...",
+    "success": "تم تحديث الاشتراك بنجاح",
+    "error": "خطأ في تحديث الاشتراك"
   }
 }
